1998-10-19  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* NEWS (Behavior change of `mime-insert-header'): New subsection.

	* mmgeneric.el (insert-header): Include `:' in field-name.

1998-10-19  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-def.el (std11-qtext-regexp): Use `eval-when-compile'; don't
	use `char-list-to-string'.
	(std11-quoted-string-regexp): Use `eval-when-compile'.
	- Use `def-edebug-spec' to define edebug-form-spec of
	  mm-define-method; fix definition of edebug-form-spec of
	  mm-define-method.

1998-10-18  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-en.sgml, mime-ja.sgml (Header encoder/decoder): Add
	description about `eword-field-encoding-method-alist'.

	* mime-en.sgml (Header encoder/decoder): Modify description about
	`eword-encode-header'.

	* mime-ja.sgml (Header encoder/decoder): Translate.

1998-10-18  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-en.sgml (entity formatting): Fix typo in description of
	`default-mime-charset'.

	* mime-en.sgml (Header encoder/decoder): Modify description of
	`eword-decode-header'.

	* mime-ja.sgml, mime-en.sgml (Header encoder/decoder): fix typo.

	* mime-en.sgml (encoder/decoder): Translate description of
	`mime-decode-string'.

1998-10-18  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-en.sgml (Content-Disposition parser): Modify description.

	* mime-en.sgml (Content-Type parser): Modify description.

1998-10-18  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-en.sgml (Content-Transfer-Encoding parser): Translate.


1998-10-18  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* FLIM: Version 1.11.0 (Yamadagawa) was released.

1998-10-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-ja.sgml, mime-en.sgml (entity formatting): Add description
	about `mime-insert-text-content'.

1998-10-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-ja.sgml, mime-en.sgml (entity formatting): New node; move
	`mime-insert-header' from `Entity-header'; move
	`default-mime-charset' from `custom'.
